# factory_demo

./: README.md
ai_manipulate_moveit_test/: CMakeLists.txt  package.xml
ai_manipulate_moveit_test/src/: arm_manipulate.cpp  arm_manipulate_panda.cpp  cartesian_manipulate.cpp  cartesian_manipulate_panda.cpp  cartesian_path_command.cpp  cv_to_moveit.cpp  gripper_command_panda.cpp  gripper_manipulate.cpp  gripper_manipulate_panda.cpp  pose_input_panda.cpp
camera_image_saver/: package.xml  setup.cfg  setup.py
camera_image_saver/camera_image_saver/: camera_image_saver.py
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/src/: hello_moveit.cpp  plan_around_objects.cpp
hello_moveit_task_constructor/: CMakeLists.txt  package.xml
hello_moveit_task_constructor/launch/: demo.launch.py   run.launch.py 
hello_moveit_task_constructor/src/: alternative_path_costs.cpp  cartesian.cpp  fallbacks_move_to.cpp  ik_clearance_cost.cpp  modular.cpp  pick_place_demo.cpp  pick_place_demo_parameters.yaml  pick_place_task.cpp
mtc_tutorial/: CMakeLists.txt  package.xml
mtc_tutorial/launch/: pick_place_demo.launch.py
mtc_tutorial/src/: mtc_tutorial.cpp
mycobot_280_move_servo_package/: CMakeLists.txt  package.xml
mycobot_280_move_servo_package/config/: mycobot_280_arm_simulated_config.yaml  mycobot_280_gripper_simulated_config.yaml
mycobot_280_move_servo_package/src/: collision_object_node.cpp  servo_arm_node_main.cpp  servo_gripper_node_main.cpp  servo_keyboard_input.cpp  servo_node_main.cpp
mycobot_control/: CMakeLists.txt  package.xml
mycobot_control/src/: hello_moveit.cpp
mycobot_description/: CMakeLists.txt  package.xml
mycobot_description/launch/: mycobot_280_arduino_view_description.launch.py
mycobot_description/urdf/: mycobot_280_urdf.xacro
mycobot_gazebo/: CMakeLists.txt  package.xml
mycobot_gazebo/config/: mycobot_280_controllers.yaml
mycobot_gazebo/launch/: mycobot_280_arduino_bringup_classic_gazebo.launch.py  mycobot_280_arduino_bringup_gazebo.launch.py  mycobot_280_arduino_bringup_ros2_control_classic_gazebo.launch.py  mycobot_280_arduino_bringup_ros2_control_gazebo.launch.py  robotpi_buger_demo.launch.py  robotpi_burger_demo.launch.py  robotpi_demo_gazebo.launch.py  robotpi_demo_gazebo_ros2_control.launch.py
mycobot_gazebo/scripts/: test_set_joint_position_publisher.py  test_set_joint_trajectory_publisher.py
mycobot_gazebo/urdf/ros2_control/classic_gazebo/: mycobot_280.urdf.xacro  mycobot_280_classic_gazebo.xacro  mycobot_280_ros2_control.xacro
mycobot_gazebo/urdf/ros2_control/gazebo/: mycobot_280_gazebo.xacro  mycobot_280_ros2_control.xacro
mycobot_gazebo/worlds/: AI_trainning_scenario.world  buger_assemble.world  burger_assemble.world  empty.world  empty_classic.world  factory.world  house_classic.world
mycobot_moveit_config/: .setup_assistant  package.xml
mycobot_moveit_config/config/: kinematics.yaml  mycobot_280.srdf  ros2_controllers.yaml
mycobot_moveit_config_manual_setup/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_moveit_config_manual_setup/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_280.srdf  ompl_planning.yaml  pilz_cartesian_limits.yaml
mycobot_moveit_config_manual_setup/launch/: move_group.launch.py  robotpi_demo_gazebo_moveit.launch.py
mycobot_moveit_config_manual_setup/src/: joint_state_filter.cpp
panda_moveit_config_manual_setup/: .setup_assistant  CMakeLists.txt  package.xml
panda_moveit_config_manual_setup/config/: joint_limits.yaml  moveit_controllers.yaml  panda.srdf
panda_moveit_config_manual_setup/launch/: robotpi_demo_gazebo_moveit_panda.launch.py
panda_moveit_config_manual_setup/rviz/: move_group.rviz
robotpi_demo_navigation/: package.xml  setup.cfg  setup.py
robotpi_demo_navigation/config/: basic.yaml
robotpi_demo_navigation/launch/: navigation.launch.py
robotpi_demo_navigation/robotpi_demo_navigation/: set_initPose.py
robotpi_demo_robot_description/: CMakeLists.txt  package.xml
robotpi_demo_robot_description/config/: demo_robot_arm_controllers.yaml
robotpi_demo_robot_description/config/mycobot_280/: mycobot280_controllers.yaml
robotpi_demo_robot_description/config/panda/: panda_controllers.yaml
robotpi_demo_robot_description/rviz/: robotpi_demo.rviz  robotpi_demo3.rviz  robotpi_demo_test.rviz
robotpi_demo_robot_description/urdf/: car.urdf.xacro
robotpi_demo_robot_description/urdf/arm/: arm.urdf.xacro  mycobot280.urdf.xacro  panda.urdf.xacro
robotpi_demo_robot_description/urdf/camera/: camera.urdf.xacro
robotpi_demo_robot_description/urdf/car_base/: car_base.urdf.xacro
robotpi_demo_robot_description/urdf/lidar/: lidar.urdf.xacro
robotpi_demo_robot_description/urdf/lite/: car_lite.urdf.xacro
robotpi_demo_robot_description/urdf/ros2_control/: demo_robot_arm_ros2_control.xacro  demo_robot_gazebo_ros2_control.xacro
robotpi_demo_robot_description/urdf/ros2_control/mycobot_280/: mycobot280_gazebo_ros2_control.xacro  mycobot280_ros2_control.xacro
robotpi_demo_robot_description/urdf/ros2_control/panda/: panda_gazebo_ros2_control.xacro  panda_ros2_control.xacro
robotpi_demo_robot_slam/: CMakeLists.txt  package.xml
robotpi_demo_robot_slam/config/: slam_toolbox.yaml
robotpi_demo_robot_slam/launch/: slam.launch.py
rviz_only_moveit_config_manual_setup/: .setup_assistant  CMakeLists.txt  package.xml
rviz_only_moveit_config_manual_setup/config/: gripper.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  mycobot_280.ros2_control.xacro  mycobot_280.srdf  mycobot_280.urdf.xacro  mycobot_280_arm.xacro  mycobot_280_arm_gripper.srdf.xacro  mycobot_280_hand.ros2_control.xacro  ompl_planning.yaml  ros2_controllers.yaml
rviz_only_moveit_config_manual_setup/launch/: hello_moveit.launch.py  move_group.launch.py  move_group_servo.launch.py  move_servo.launch.py  move_servo_plan_around.launch.py  run.launch.py
rviz_only_moveit_config_manual_setup/rviz/: hello_moveit.rviz  move_servo.rviz  mtc.rviz
turtlebot4_description/: CMakeLists.txt  package.xml
(+23 files in other folders)
