<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_gazebo</name>
  <version>0.0.0</version>
  <description>Contains the files to simulate the robot with Gazebo, an open-source robotics simulator.</description>
  <maintainer email="automaticaddison@todo.com">Addison Sears-Collins</maintainer>
  <license>BSD-3-Clause</license>

  <depend>ament_cmake</depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
