<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotpi_demo_robot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="puddingsai0725@gmail.com">marcus</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gripper_controllers</depend>
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>trajectory_msgs</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
