<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotpi_demo_robot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="puddingsai0725@gmail.com">marcus</maintainer>
  <license>TODO: License declaration</license>

  <depend>ament_cmake</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>rclcpp</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
